# personal-finance

./: .gitignore  TODO.md  pyproject.toml
src/: main.py  scratch.py
src/personal_finance/: __init__.py  explore.py  main.py  model.py
src/personal_finance/configuration/: data_config.py  log_config.py
src/personal_finance/data_store/: deposit_accounts.py
src/personal_finance/data_store/source/: deposit_accounts.py
src/personal_finance/model/: __init__.py
src/personal_finance/model/source/: deposit_accounts.py
src/personal_finance/schemas/: transformed.py
src/personal_finance/schemas/source/: deposit_accounts.py
src/personal_finance/tasks/: transform.py
src/personal_finance/transform/deposit_accounts/: deposit_accounts.py
src/personal_finance/utils/: utils.py
tests/: conftest.py
tests/personal_finance/configuration/: test_data_config.py
tests/personal_finance/data_store/: test_deposit_accounts.py
tests/personal_finance/data_store/source/: test_deposit_accounts.py
tests/test_data/.personal-finance/: config.yaml
tests/test_data/Banking/Barclays/Data/accounts/: transactions1.csv
tests/test_data/Banking/Skipton/Data/: transactions.xlsx
